--- a/html-test/edit.html
+++ b/html-test/edit.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>编辑博客</title>
+    <title>ブログ編集</title>
     <style type="text/css">
         body {
             margin: 0 20px;
@@ -26,7 +26,7 @@
     </style>
 </head>
 <body>
-    <h1 style="border-bottom: 1px solid #ccc; padding-bottom: 10px;">编辑博客</h1>
+    <h1 style="border-bottom: 1px solid #ccc; padding-bottom: 10px;">編集ブログ</h1>
     <div>
         <div class="title-wrapper">
             <input id="text-title">
@@ -80,7 +80,7 @@
         const url = '/api/blog/detail?id=' + urlParams.id
         get(url).then(res => {
             if (res.errno !== 0) {
-                alert('操作错误')
+                alert('操作エラー')
                 return
             }
 
@@ -88,7 +88,7 @@
             const data = res.data || {}
             $textTitle.val(data.title)
             $textContent.val(data.content)
-            $btnUpdate.attr('data-id', data.id)
+            $btnUpdate.attr('data-id', data.id || data._id)
         })
 
         // 提交修改内容
@@ -105,7 +105,7 @@
             }
             post(url, data).then(res => {
                 if (res.errno !== 0) {
-                    alert('操作错误')
+                    alert('操作エラー')
                     return
                 }
                 alert('更新成功')
