--- a/html-test/login.html
+++ b/html-test/login.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>登录</title>
+    <title>ログイン</title>
 </head>
 <body>
     <div>
         <label>
-            用户名 <input type="text" id="textUsername"/>
+            ユーザー名 <input type="text" id="textUsername" value="lisi"/>
         </label>
         <label>
-            密码 <input type="password" id="textPassword"/>
+            パスワード <input type="password" id="textPassword" placeholder="123"/>
         </label>
-        <button id="btnLogin">登录</button>
+        <button id="btnLogin">ログイン</button>
     </div>
     
     <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.js"></script>
