--- a/html-test/index.html
+++ b/html-test/index.html
@@ -31,7 +31,9 @@
     </style>
 </head>
 <body>
-    <h1>博客首页</h1>
+    <h1>ブログトップ</h1>
+    <hr>
+    <a href="/login.html">ログイン</a>
     <div id="blog-container"></div>
 
     <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.js"></script>
@@ -45,7 +47,7 @@
 
         // 显示格式化的时间
         function getFormatDate(dt) {
-            return moment(dt).format('LL')
+            return moment(dt).format('LLL')
         }
 
         // 获取 url 参数
@@ -85,13 +87,13 @@
                 $container.append($(`
                     <div class="title-wrapper">
                         <p class="title">
-                        <a href="/detail.html?id=${item.id}" target="_blank">${item.title}</a>
+                        <a href="/detail.html?id=${item.id || item._id}" target="_blank">${item.title}</a>
                         </p>
                         <div class="info-wrapper">
                             <span>
                                 <a href="/index.html?author=${item.author}">${item.author}</a>
                             </span>
-                            <span>${getFormatDate(item.createtime)}</span>
+                            <span>${getFormatDate(item.createAt )}</span>
                         </div>
                     </div>
                 `))
